--- a/app/src/main/res/layout/row_account_menu_item.xml
+++ b/app/src/main/res/layout/row_account_menu_item.xml
@@ -21,10 +21,11 @@
             android:id="@+id/ivLogoInvite"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@mipmap/ic_launcher_round"
+            imgUrl="@{menu.imgRes}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_invite_friends" />
 
         <TextView
             android:id="@+id/tvInvite"
