1: Implemented UI for My Profile screen. 2: Implemented UI for Transactions screen. 3: Fixed some minor bugs.

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -73,7 +73,8 @@
                 android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
-                android:padding="@dimen/space_8">
+                android:padding="@dimen/space_8"
+                android:visibility="@{vm.logoutVisibility}">
 
 
                 <ImageView
