--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -39,7 +39,7 @@
                 app:layout_goneMarginTop="@dimen/space_8">
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/ivProfile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/temp_profile" />
@@ -55,10 +55,10 @@
                 android:padding="@dimen/space_6"
                 android:src="@drawable/ic_photo_camera_black_24dp"
                 android:tint="@color/white"
-                app:layout_constraintHorizontal_bias="0.68"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="@id/view2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.68"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/view2"
                 app:layout_constraintVertical_bias="0.9" />
 
