--- a/app/src/main/res/layout/btn_add_bank_account.xml
+++ b/app/src/main/res/layout/btn_add_bank_account.xml
@@ -18,7 +18,7 @@
         android:textAllCaps="false"
         android:layout_marginEnd="@dimen/default_space"
         android:layout_marginStart="@dimen/default_space"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/white" />
 
 </layout>
