--- a/app/src/main/res/layout/btn_add_next_bank_mandate.xml
+++ b/app/src/main/res/layout/btn_add_next_bank_mandate.xml
@@ -24,7 +24,7 @@
             android:fontFamily="@font/lato_bold"
             android:text="@string/add_new_bank_account"
             android:textAllCaps="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/white" />
 
         <Button
@@ -37,7 +37,7 @@
             android:text="@string/next"
             android:textAllCaps="false"
             android:layout_marginBottom="@dimen/space_8"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/white" />
     </LinearLayout>
 
