--- a/app/src/main/res/layout/btn_add_bank_account.xml
+++ b/app/src/main/res/layout/btn_add_bank_account.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="widget"
-            type="org.supportcompact.adapters.WidgetsViewModel" />
+            type="com.tarrakki.module.bankaccount.SingleButton" />
 
         <variable
             name="onAdd"
@@ -22,9 +23,10 @@
         android:background="@drawable/shape_btn_idle_bg"
         android:fontFamily="@font/lato_bold"
         android:onClick="@{onAdd}"
-        android:text="@string/add_new_bank_account"
+        android:text="@{widget.title}"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        tools:text="@string/add_new_bank_account" />
 
 </layout>
