--- a/app/src/main/res/layout/row_bank_mandate_list_item.xml
+++ b/app/src/main/res/layout/row_bank_mandate_list_item.xml
@@ -156,14 +156,14 @@
             android:id="@+id/tvInfo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_8"
             android:layout_marginEnd="8dp"
             android:text="@string/normally_take_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:visibility="@{widget.pending ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="@id/tvPending"
             app:layout_constraintEnd_toStartOf="@+id/tvPending"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mDivider2" />
+            app:layout_constraintTop_toTopOf="@id/tvPending" />
 
         <TextView
             android:id="@+id/tvPending"
