--- a/app/src/main/res/drawable/shape_amc_list_divider_4dp.xml
+++ b/app/src/main/res/drawable/shape_amc_list_divider_4dp.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#D6E5CE" />
-    <corners android:radius="@dimen/space_32" />
+    <solid android:color="@color/bg_color" />
+    <size
+        android:width="4dp"
+        android:height="4dp" />
 </shape>
