--- a/app/src/main/res/drawable/shape_risk_level_bg.xml
+++ b/app/src/main/res/drawable/shape_risk_level_bg.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#FED1D1" />
-    <corners android:radius="@dimen/default_space" />
+    <corners android:radius="@dimen/space_32" />
 </shape>
