--- a/app/src/main/res/layout/fragment_recommended_base_on_risk_level.xml
+++ b/app/src/main/res/layout/fragment_recommended_base_on_risk_level.xml
@@ -103,13 +103,13 @@
                     android:fontFamily="@font/lato_semibold"
                     android:gravity="center_vertical"
                     android:minWidth="94dp"
-                    android:paddingStart="@dimen/space_8"
-                    android:paddingEnd="@dimen/space_8"
-                    android:paddingTop="@dimen/space_4"
-                    android:paddingBottom="@dimen/space_4"
+                    android:paddingStart="@dimen/_8sdp"
+                    android:paddingTop="@dimen/_4sdp"
+                    android:paddingEnd="@dimen/_8sdp"
+                    android:paddingBottom="@dimen/_4sdp"
                     android:text="@{invest.riskLevel}"
-                    android:textColor="@color/pdlg_color_red"
-                    android:textSize="@dimen/sp8"
+                    android:textColor="@color/name_aggressive"
+                    android:textSize="@dimen/_8ssp"
                     app:layout_constraintStart_toEndOf="@id/ivItem"
                     app:layout_constraintTop_toBottomOf="@id/tvRiskDetails"
                     tools:drawableStart="@drawable/ic_red_up"
@@ -127,17 +127,18 @@
                     android:fontFamily="@font/lato_semibold"
                     android:gravity="center_vertical"
                     android:minWidth="94dp"
-                    android:paddingStart="@dimen/space_8"
-                    android:paddingEnd="@dimen/space_8"
-                    android:paddingTop="@dimen/space_4"
-                    android:paddingBottom="@dimen/space_4"
+                    android:paddingStart="@dimen/_8sdp"
+                    android:paddingTop="@dimen/_4sdp"
+                    android:paddingEnd="@dimen/_8sdp"
+                    android:paddingBottom="@dimen/_4sdp"
                     android:text="@{invest.returnOnRiskLevel}"
                     android:textColor="@color/pdlg_color_green"
-                    android:textSize="@dimen/sp8"
+                    android:textSize="@dimen/_8ssp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvRiskDetails"
                     tools:drawableStart="@drawable/ic_green_up"
                     tools:text="High Return" />
+
 
             </android.support.constraint.ConstraintLayout>
 
